# code

./: .gitignore  README
SDLgears/: .sconsign.dblite  SConstruct  SDLgears.c
c++/defragment/: defrag.cpp
c++/leetcode/: MaximumSubarray.cpp  MinimumPathSum.cpp  NQueens.cpp  ReverseInteger.cpp  SConstruct  TwoSum.cpp  ValidPalindrome.cpp
haskell/: 99.hs  HelloWindow.hs  HelloWindow.hs~  Shapes.hs  Shapes.hs~  baby.hs  evalArith.hs  fold.hs  haskell-study-plan.txt  list.hs  lyah_modules.hs  lyah_typeclasses.hs  multicore.hs  questions.txt  tryGeometry.hs
haskell/Geometry/: Cube.hs  Cuboid.hs
haskell/irc/: callstack.txt  callstack.txt~  list.txt  recursion-optimal
haskell/lyah/: rpnCalculator.hs  rpnCalculator.hs~
haskell/nttdata/: ex1.hs  ex2.hs  ex3.hs  ex4.hs  ex4sample.txt
haskell/pearls/: README.md  pearls.cabal
haskell/tsuru/: stack.yaml  tsuru.cabal
haskell/tsuru/app/: Main.hs
haskell/tsuru/src/: Lib.hs
haskell/yesod/: .gitignore  Hello.cabal  stack.yaml
iphoneos/AccelerometerSample/: AccelerometerSample-Info.plist  AccelerometerSample_Prefix.pch  MainWindow.xib  main.m
iphoneos/OpenGLPerformance/: MainWindow.xib  OpenGLPerformance-Info.plist  OpenGLPerformance_Prefix.pch  main.m
iphoneos/TicTacToe/: MainWindow.xib  main.m
iphoneos/iPadOpenGLExample/: MainWindow.xib  iPadOpenGLExample_Prefix.pch  main.m
objective-c/: GNUmakefile  TODO  TODO~  questions.txt
objective-c/classes/: BiQueue.h  BiQueue.h~  BiQueue.m  (+13 more)
opengl/: Makefile  Makefile~
python/: pyparsing_hello.py  pyparsing_hello.py~
scons/: .sconsign.dblite  SConstruct
(+178 files in other folders)
