name:                tsuru
version:             0.1.0.0
synopsis:            Solution for the tsuru coding exercise
description:         Please see README.md
homepage:            http://github.com/plumenator/code/haskell/tsuru
license:             BSD3
license-file:        LICENSE
author:              Karthik Ravikanti
maintainer:          karthik.ravikanti@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
  default-language:    Haskell2010

executable parse-quote
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , tsuru
  default-language:    Haskell2010

test-suite tsuru-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tsuru
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plumenator/code/haskell/tsuru
